# lex-study-foundation

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/generation/: general_turkish.yaml
configs/training/: pilot_lora.yaml
docs/: architecture.md  progress.md
src/lex_study_foundation/: __init__.py  __main__.py  cli.py
src/lex_study_foundation/config/: __init__.py  schemas.py  settings.py
src/lex_study_foundation/data/: schemas.py
src/lex_study_foundation/training/: __init__.py
src/lex_study_foundation/utils/: __init__.py  console.py  gpu.py  io.py  paths.py  text.py
src/project_blank/: __init__.py  __main__.py  cli.py
src/project_blank/config/: __init__.py  schemas.py  settings.py
src/project_blank/data/: __init__.py  schemas.py
src/project_blank/evaluation/: __init__.py
src/project_blank/inference/: __init__.py
src/project_blank/utils/: __init__.py  paths.py
tests/: conftest.py  test_cli_smoke.py  test_io.py  test_text.py
tools/: run.bat  setup_env.bat
