[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-blank"
version = "0.1.0"
description = "Turkish educational LLM fine-tuning system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "USER" }]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "filelock>=3.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "pre-commit>=3.7",
]
# Phase 3: Data generation pipeline
datagen = [
    "openai>=1.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "duckduckgo-search>=6.0",
    "python-dotenv>=1.0",
]
# Phase 4: Training
training = [
    # torch must be installed separately (nightly/cu128 for RTX 5080)
    "transformers>=4.44",
    "peft>=0.12",
    "bitsandbytes>=0.43",
    "accelerate>=0.33",
    "datasets>=2.20",
    "trl>=0.9",
    "sentencepiece>=0.2",
    "safetensors>=0.4",
]
# Phase 5: Evaluation
eval = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
project-blank = "project_blank.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/project_blank"]

# ============================================================================
# Ruff — lint + format
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# cli.py uses Unicode status icons (ℹ, ✓, ✗, ⚠) intentionally
"src/project_blank/cli.py" = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["project_blank"]

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

# ============================================================================
# Pyright
# ============================================================================
[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Windows"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
